# agentcore-workshops

./: README.md
a2a-with-strands/: .gitignore  02-prereqs.md  03-weather-agent.md  04-shopping-agent.md  05-orchestrator-agent.md  06-cleanup.md  Makefile  README.md  instructions.txt  orchestrator_invoker.py
a2a-with-strands/agents/orchestrator/: Dockerfile  main.py  pyproject.toml
a2a-with-strands/agents/shopping/: Dockerfile  main.py  pyproject.toml
a2a-with-strands/agents/weather/: main.py  pyproject.toml
a2a-with-strands/images/: diagrams.drawio
a2a-with-strands/terraform/: bootstrap.tf  cognito.tf  main.tf  providers.tf  shopping-agent-ac-runtime.tf  shopping-agent-app-logs.tf  shopping-agent-ecr.tf  weather-agent-ac-runtime.tf  weather-agent-app-logs.tf  weather-agent-ecr.tf  workshop.tf
a2a-with-strands/terraform/cognito/: cognito.tf
a2a-with-strands/terraform/ecr/: repo.tf
building-ai-agents/: .gitignore  Makefile  m00-bootstrap.md  m01-local-agent.md  m02-knowledge-base.md  m03-memory.md  m04-gateway.md  m05-runtime.md  readme.md
building-ai-agents/images/: diagrams.drawio
building-ai-agents/knowledge-base/: monitor-calibration-guide.txt  wireless-connectivity-guide.txt
building-ai-agents/src/agent/: Dockerfile  agent.py  logger.py  main.py  mcp_client.py  memory_config.py  pyproject.toml  reqs.txt  system_prompt.py
building-ai-agents/src/agent/tools/: product_info.py  return_policy.py  tech_support.py  web_search.py
building-ai-agents/terraform/: bootstrap.tf  providers.tf  workshop.tf
building-ai-agents/terraform/gateway/: cognito.tf  (+2 more)
(+16 files in other folders)
